Updated tests with Clash, Improved documentation

--- a/test/_expected/index.html
+++ b/test/_expected/index.html
@@ -1,21 +1,11 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Your New Jekyll Site</title>
-        <meta name="viewport" content="width=device-width">
+<figure class='code-highlight-figure'><figcaption class='code-highlight-caption'><span class='code-highlight-caption-title'>Guardfile</span><a class='code-highlight-caption-link' href='https://gist.github.com/5946651'>link</a></figcaption><div class='code-highlight'><pre class='code-highlight-pre'><div data-line='1' class='code-highlight-row numbered'><div class='code-highlight-line'><span class="nb">require</span> <span class="s1">&#39;guards/guard-jekyll-plus.rb&#39;</span>
+</div></div><div data-line='2' class='code-highlight-row numbered'><div class='code-highlight-line'> </div></div><div data-line='3' class='code-highlight-row numbered'><div class='code-highlight-line'><span class="c1"># Sample guard</span>
+</div></div><div data-line='4' class='code-highlight-row numbered'><div class='code-highlight-line'><span class="n">guard</span> <span class="ss">:jekyll</span> <span class="k">do</span>
+</div></div><div data-line='5' class='code-highlight-row numbered'><div class='code-highlight-line'>  <span class="n">watch</span> <span class="sr">/^source/</span>
+</div></div><div data-line='6' class='code-highlight-row numbered'><div class='code-highlight-line'>  <span class="n">watch</span> <span class="s1">&#39;_config.yml&#39;</span>
+</div></div><div data-line='7' class='code-highlight-row numbered'><div class='code-highlight-line'><span class="k">end</span></div></div></pre></div></figure>
 
-    </head>
-    <body>
-
-        <div class="site">
-          <div class="header">
-            <h1 class="title"><a href="/">Your New Jekyll Site</a></h1>
-            <a class="extra" href="/">home</a>
-          </div>
-
-          <figure class='code-highlight-figure'><figcaption class='code-highlight-caption'><span class='code-highlight-caption-title'>guard-jekyll-plus.rb</span><a class='code-highlight-caption-link' href='https://gist.github.com/5946651'>link</a></figcaption><div class='code-highlight'><pre class='code-highlight-pre'><div data-line='1' class='code-highlight-row numbered'><div class='code-highlight-line'>require</span> <span class="s1">&#39;guard&#39;</span>
+<figure class='code-highlight-figure'><figcaption class='code-highlight-caption'><span class='code-highlight-caption-title'>guard-jekyll-plus.rb</span><a class='code-highlight-caption-link' href='https://gist.github.com/5946651'>link</a></figcaption><div class='code-highlight'><pre class='code-highlight-pre'><div data-line='1' class='code-highlight-row numbered'><div class='code-highlight-line'><span class="nb">require</span> <span class="s1">&#39;guard&#39;</span>
 </div></div><div data-line='2' class='code-highlight-row numbered'><div class='code-highlight-line'><span class="nb">require</span> <span class="s1">&#39;guard/guard&#39;</span>
 </div></div><div data-line='3' class='code-highlight-row numbered'><div class='code-highlight-line'> </div></div><div data-line='4' class='code-highlight-row numbered'><div class='code-highlight-line'><span class="nb">require</span> <span class="s1">&#39;jekyll&#39;</span>
 </div></div><div data-line='5' class='code-highlight-row numbered'><div class='code-highlight-line'> </div></div><div data-line='6' class='code-highlight-row numbered'><div class='code-highlight-line'><span class="k">module</span> <span class="nn">Guard</span>
@@ -112,22 +102,22 @@
 </div></div><div data-line='117' class='code-highlight-row numbered'><div class='code-highlight-line'> </div></div><div data-line='118' class='code-highlight-row numbered'><div class='code-highlight-line'>  <span class="k">end</span>
 </div></div><div data-line='119' class='code-highlight-row numbered'><div class='code-highlight-line'><span class="k">end</span></div></div></pre></div></figure>
 
-          <div class="footer">
-            <div class="contact">
-              <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
-              </p>
-            </div>
-            <div class="contact">
-              <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
-              </p>
-            </div>
-          </div>
-        </div>
-
-    </body>
-</html>
+<figure class='code-highlight-figure'><figcaption class='code-highlight-caption'><span class='code-highlight-caption-title'>gistfile1.txt</span><a class='code-highlight-caption-link' href='https://gist.github.com/9964117'>link</a></figcaption><div class='code-highlight'><pre class='code-highlight-pre'><div data-line='41' class='code-highlight-row numbered'><div class='code-highlight-line'>-----BEGIN PGP MESSAGE-----
+</div></div><div data-line='42' class='code-highlight-row numbered'><div class='code-highlight-line'>Version: Keybase OpenPGP v0.1.3
+</div></div><div data-line='43' class='code-highlight-row numbered'><div class='code-highlight-line'>Comment: https://keybase.io/crypto
+</div></div><div data-line='44' class='code-highlight-row numbered'><div class='code-highlight-line'> </div></div><div data-line='45' class='code-highlight-row numbered'><div class='code-highlight-line'>yMHaAnicdZFtSFRLGMd3W91SrDbMLSUtBiqpxc7LnDnnrBRmSGHUl95Ii3XOOXN2
+</div></div><div data-line='46' class='code-highlight-row numbered'><div class='code-highlight-line'>D+rutmd3fQ+CArG6F4J8uQSSIktJHxSzSFKx0A8VJYIGJXK/uFrQXoibkJLOivdb
+</div></div><div data-line='47' class='code-highlight-row numbered'><div class='code-highlight-line'>d74M83t+/2dmeF5vtVnSrW/7SwJFz/jr1jejCxHLuaNzCw1ACWh1wN0AKsn6pht+
+</div></div><div data-line='48' class='code-highlight-row numbered'><div class='code-highlight-line'>LwkFQ4Y/DNxAQiqWoMYipMq6IosQ6hKnIhUhVoe8pAlQ4QhGLHABX8BMJmgbBZuk
+</div></div><div data-line='49' class='code-highlight-row numbered'><div class='code-highlight-line'>wAhQRg8eQ6P0N35kvSBIkJOhDjVJ5zlR0xVF13iWEQReYgjHMEnRJCE/ribUNqpx
+</div></div><div data-line='50' class='code-highlight-row numbered'><div class='code-highlight-line'>2GeYoMkFKIwaKoUNYKPoNcK+iPK/gXBdMElqiOLZyHoUw6/R79JIlIRMI+AHbpaa
+</div></div><div data-line='51' class='code-highlight-row numbered'><div class='code-highlight-line'>athIhlleRgLiZQhdgNQGjRDxGElDEJHE0OUCwRCJ0paYEbFEJERkiGSd5UReEDVG
+</div></div><div data-line='52' class='code-highlight-row numbered'><div class='code-highlight-line'>FUUCdcIiHiuqImKocSIROEwNmRchYhSFw4JEVI3eb5Jr/gBwI/pM7KUtTcPrx+FI
+</div></div><div data-line='53' class='code-highlight-row numbered'><div class='code-highlight-line'>iICmsdErKRZrusWeuik5MEt6muO/Mc5xm3+hx4niqdTsuPy5qmNlOR+1tZvWztIX
+</div></div><div data-line='54' class='code-highlight-row numbered'><div class='code-highlight-line'>ct73mum+2fe3f2YmhsbvXur4WH9mpVyYqV7sGd0+rjY3150fflh7c37R9ij7eMqh
+</div></div><div data-line='55' class='code-highlight-row numbered'><div class='code-highlight-line'>1pFiNHO63BG2n4oZT/oH/2m05bWV2Me6J7juolhPytXVtG/qJBtbHeAGGofisT5p
+</div></div><div data-line='56' class='code-highlight-row numbered'><div class='code-highlight-line'>b+anwYmi3sUBvDBV7Ov8M6OgDB2rdy7j3JXWlrMFg/NH4js/eKfjpXugs+LWyRuW
+</div></div><div data-line='57' class='code-highlight-row numbered'><div class='code-highlight-line'>e1mJPEf+eA66SL622wodib8PzD7PHrb35u6/b530OFtedWVeqNpd46mMPqg/ITrL
+</div></div><div data-line='58' class='code-highlight-row numbered'><div class='code-highlight-line'>2n7kLMF9fx1+51zaofu+ZJT+e/DlSFpX1h93tKe7fFsmm7dxlysK1wDWzAuX
+</div></div><div data-line='59' class='code-highlight-row numbered'><div class='code-highlight-line'>=czvM
+</div></div><div data-line='60' class='code-highlight-row numbered'><div class='code-highlight-line'>-----END PGP MESSAGE-----</div></div></pre></div></figure>
